--- a/src/screens/header/login/LoginDialog.css
+++ b/src/screens/header/login/LoginDialog.css
@@ -4,8 +4,8 @@
     position: fixed;
     left: 50%;
     top: 50%;
-    margin-top: -50px;
-    margin-left: -100px;
+    margin-top: -15%;
+    margin-left: -10%;
     border-radius: 1px;
     outline: none;
     padding: 5px;
